# Contacts

./: CMakeLists.txt  Delegate.qml  Main.qml  contact.cpp  contact.h  contactmodel.cpp  contactmodel.h  contacts.cpp  contacts.h  main.cpp
android/: AndroidManifest.xml  gradle.properties
android/src/com/example/contactsdisplay/: Contact.h  Contact.java  Contacts.java  MainActivity.java
